# tuioxide

./: Cargo.toml  LICENSE  README.md
client/: Cargo.toml
client/examples/: receive_tuio_11.rs  receive_tuio_11_websocket.rs  receive_tuio_20_udp.rs
client/src/common/: mod.rs  osc_receiver.rs
client/src/tuio11/: client.rs  processor.rs
client/src/tuio20/: processor.rs
examples/: receive.rs  receive_tuio_11.rs  receive_tuio_11_udp.rs  receive_tuio_11_websocket.rs  receive_tuio_20.rs  receive_tuio_20_udp.rs  receive_tuio_20_websocket.rs  send_tuio_11_udp.rs
server/: Cargo.toml
src/: lib.rs
src/client/: mod.rs  osc_receiver.rs  udp_receiver.rs
src/client/tuio11/: client.rs  mod.rs  processor.rs
src/client/tuio20/: client.rs  processor.rs
src/common/: client.rs  constants.rs  mod.rs  osc_receiver.rs  osc_utils.rs  tuio_time.rs
src/core/: client.rs  container.rs  entity.rs  errors.rs  manager.rs  math.rs  mod.rs  osc_receiver.rs  osc_sender.rs  osc_utils.rs  processor.rs  profile.rs  rotation.rs  server.rs  translation.rs  tuio_state.rs  tuio_time.rs  utils.rs
src/core/common/: client.rs  mod.rs  osc_utils.rs
src/core/tuio11/: blob.rs  bundle.rs  cursor.rs  event.rs  mod.rs  object.rs  osc_decoder_encoder.rs
src/core/tuio20/: bounds.rs  bundle.rs  events.rs  mod.rs  pointer.rs  symbol.rs  token.rs
src/tuio11/: blob.rs  bundle.rs  client.rs  container.rs  cursor.rs  entity.rs  events.rs  manager.rs  mod.rs  object.rs  osc_decoder_encoder.rs  point.rs  processor.rs  repository.rs  rotation.rs  server.rs  translation.rs
src/tuio20/: bounds.rs  bundle.rs  client.rs  events.rs  mod.rs  osc_decoder.rs  pointer.rs  processor.rs  symbol.rs  token.rs
tuio/: Cargo.toml
tuio/src/common/: mod.rs  osc_receiver.rs  tuio_state.rs  tuio_time.rs  utils.rs
tuio/src/tuio11/: cursor.rs  mod.rs  processor.rs  profile.rs  translation.rs
tuio/src/tuio20/: bounds.rs  bundle.rs  mod.rs  osc_decoder.rs  processor.rs  token.rs
tuioxide/: Cargo.toml
tuioxide-macros/: Cargo.toml
tuioxide-macros/src/: lib.rs
tuioxide/examples/: receive_tuio_11_udp.rs  receive_tuio_11_websocket.rs  receive_tuio_20_udp.rs
tuioxide/src/: lib.rs
tuioxide/src/client/: mod.rs  osc_receiver.rs  websocket_receiver.rs
tuioxide/src/client/tuio11/: processor.rs
tuioxide/src/client/tuio20/: processor.rs
tuioxide/src/core/: container.rs  errors.rs  math.rs  mod.rs  osc_utils.rs  tuio_state.rs
tuioxide/src/core/common/: container.rs  errors.rs  osc_utils.rs  tuio_time.rs
tuioxide/src/core/tuio11/: blob.rs  bundle.rs  cursor.rs  event.rs  mod.rs  object.rs  osc_decoder_encoder.rs
tuioxide/src/core/tuio20/: bounds.rs  bundle.rs  osc_decoder.rs  pointer.rs  symbol.rs  token.rs
