[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Erich Querner"]

[workspace]
members = ["client", "server", "tuio", "tuioxide-macros"]

[workspace.dependencies]
anyhow = "~1.0"
rosc = "~0.11"
euclid = "~0.22"
thiserror = "~2.0"
ringbuffer = "~0.16"
tungstenite = "~0.27"
tuioxide-macros = { path = "./tuioxide-macros" }
log = "0.4"
