[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Erich Querner"]
description = "A Rust implementation of the TUIO 1.1 and TUIO 2.0 protocols, providing both client and server components for sending and receiving multitouch and tangible object data over OSC."
readme = "README.md"
keywords = ["tuio", "osc", "tangible", "touch", "multitouch"]
categories = ["network-programming", "multimedia"]
license = "MIT"
repository = "https://codeberg.org/qbic/tuioxide"

[workspace]
members = ["tuioxide", "tuioxide-macros"]
resolver = "2"
