[package]
name = "tuioxide"
version = "0.3.0"
edition = "2024"
authors = ["Erich Querner"]
description = "A Rust implementation of the TUIO 1.1 and TUIO 2.0 protocols, providing both client and server components for sending and receiving multitouch and tangible object data over OSC."
readme = "README.md"
keywords = ["tuio", "osc", "tangible", "touch", "multitouch"]
categories = ["network-programming", "multimedia"]
license = "MIT"
repository = "https://github.com/eqbic/tuioxide"

[features]
default = []
websocket = ["dep:tungstenite"]

[dependencies]
rosc = "~0.11"
thiserror = "~2.0"
tungstenite = {version = "0.27", optional = true}
log = "0.4"

[[example]]
name = "receive_tuio_11_websocket"
required-features = ["websocket"]

[[example]]
name = "receive_tuio_11_udp"

[[example]]
name = "receive_tuio_20_udp"

[[example]]
name = "receive_tuio_20_websocket"
required-features = ["websocket"]
