[package]
name = "tuioxide"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A Rust implementation of the TUIO 1.1 and TUIO 2.0 protocols, providing both client and server components for sending and receiving multitouch and tangible object data over OSC."
readme = "../README.md"


[dependencies]
anyhow = "~1.0"
rosc = "~0.11"
euclid = "~0.22"
thiserror = "~2.0"
ringbuffer = "~0.16"
tungstenite = "~0.27"
log = "0.4"
tuioxide-macros = {path="../tuioxide-macros"}
