[package]
name = "tuioxide"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
description = "A Rust implementation of the TUIO 1.1 and TUIO 2.0 protocols, providing both client and server components for sending and receiving multitouch and tangible object data over OSC."
readme = "../README.md"
keywords = ["tuio", "osc", "tangible", "touch", "multitouch"]

[features]
default = []
websocket = ["dep:tungstenite"]

[dependencies]
rosc = "~0.11"
euclid = "~0.22"
thiserror = "~2.0"
tungstenite = {version = "0.27", optional = true}
log = "0.4"
tuioxide-macros = {path="../tuioxide-macros"}

[[example]]
name = "receive_tuio_11_websocket"
required-features = ["websocket"]
