[package]
name = "tuioxide"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
websocket = ["dep:tungstenite"]

[dependencies]
rosc = "~0.11"
euclid = "~0.22"
thiserror = "~2.0"
tungstenite = {version = "0.27", optional = true}
log = "0.4"
tuioxide-macros = {version = "0.1.0", path="../tuioxide-macros"}

[[example]]
name = "receive_tuio_11_websocket"
required-features = ["websocket"]
